--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,14 @@
-
 /* Your CSS Code here. */
+.holder{
+	display:flex;
+	align-item:center;
+	justify-content:center;
+	width:100vw;
+	height:100vh;
+	
+}
+.item-1{
+	background-color:red;
+	width:100px;
+	height:100px;
+}
