--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,15 @@
-/* Your CSS Code here. */
 .holder{
-	display:flex;
-	align-item:center;
-	justify-content:center;
-	width:100vw;
-	height:100vh;
-	
+    display: flex;
+	position: fixed;
+    background-color: blue;
+    justify-content: center;
+     align-items: center;
+  width: 100vw; 
+  height: 100vh;
 }
 .item-1{
-	background-color:red;
-	align-item:center;
-	width:100px;
-	height:100px;
+    background-color: red;
+    height: 100px;
+    width: 100px;
+	display: flex;
 }
